css/style.css
@font-face{
  font-family: "Neue Montreal Medium";
  src:url('fonts/NeueMontreal-Medium.otf');
}

@font-face{
  font-family: "Neue Montreal";
  src:url('fonts/NeueMontreal-Regular.otf');
}

@font-face{
  font-family: "Saol Display Reg";
  src:url('fonts/SaolDisplay-RegularItalic.otf');
}
@font-face{
  font-family: "Saol Display";
  src:url('fonts/SaolDisplay-LightItalic.otf');
}

@font-face{
  font-family: "Reconna";
  src:url('fonts/ReconnaSerif.otf');
}
/*@font-face{
  font-family: "Neue Machina";
  src:url('fonts/NeueMachina-Regular.woff');
}
@font-face{
  font-family: "Neue Montreal Medium";
  src:url('fonts/AgipoRegular.otf');
}
@font-face{
  font-family: "Neue Montreal";
  src:url('fonts/AgipoRegular.otf');
}
*/



html{
 min-height:100vh;
 background-color: #f2f2f2;
}
::selection{
  background-color: yellow;
}
body {
	font-family: 'Neue Montreal Medium';
	font-size: 18px;
	line-height: 1;
	color: black;
  overflow-x: hidden;
  margin:0;
}
.dot{
  font-size: 17px;
  font-family: 'Saol Display Reg';
  font-style:italic;
}
.main{
  grid-template-columns: 29% 35.5% 35.5%;
}
.top{
  position:absolute;
  z-index:100;
  display:grid;
  width: 100%;
  grid-template-columns: 35% 32.5% 32.5%;
  flex-direction: row;
  padding-left:16px;
  padding-top:12px;
 /* background-color:#f2f2f2;
  -webkit-box-shadow: 0px -1px 10px 11px #f2f2f2;
 -moz-box-shadow: 0px -1px 10px 11px #f2f2f2;
 box-shadow: 0px -1px 10px 11px #f2f2f2;*/

transition-property: background-color, box-shadow;
transition-duration: 0.5s, .5s;
-webkit-transition: background-color 0.5s linear;
-ms-transition: background-color 0.5s linear;
transition: background-color 0.5s linear;
}

.top p, .top a, .bottom a, #projfooter, .mobilecontact{
  color: black;
  font-family: 'Neue Montreal Medium';
  letter-spacing:-.2px;
  font-size: 1.8rem;
  text-align: left;
  cursor: pointer;
  padding-right:10px;
}

.top, .bottom{
  z-index:10;
}

.bottom{
  display: flex;
  flex-direction: column;
  padding:0;
  margin-bottom:10px;
	bottom: 0;
  left: 10px;
  position: fixed;
}
.bottom a{
  margin:0px;
}
a{
  color:black;
  text-decoration: none;
  display:inline;
}
.flip{
  transition: .2s;
  text-align:left;
  justify-content:flex-start;
}
/*.flip:hover{
  transform:rotateY(180deg);
}*/
.about{
  justify-self:flex-start;
}
.list{
  justify-self:flex-start; 
}

/*-------------------------------------about----------------------------------------*/
#aboutContainer{
  display:block;
  height:auto;
  width:100%;
  min-height:10px;
}
#about{
 max-width: 100%;
 display: grid;
 grid-template-columns: 29% 35.5% 35.5%;
 grid-template-rows: auto;
 border-bottom:1px black solid;
}

#about p{
  line-height:1.25;
  padding:0;
  padding-left:6px;
  margin:0;
}
#about .p{
  grid-row:1;
  grid-column:2;
  padding-right:30px;
  padding-bottom:14px;
}
#about img{
  padding-right: 10px;
  max-height:200px;
  max-width: 92%;
  width:auto;
  transition:.2s;
  padding-left:12px;
  grid-column:1;
  grid-row:1;
  margin-right:10px;
  margin-top:2px;
  justify-self:flex-start;
  align-self:flex-start;
  padding-bottom:14px;
}
#about .contact{
  line-height:1.175;
  display:inline-block;
  justify-content:flex-start;
  text-align:left;
  padding-right:24px;
  padding-left:10px;
  grid-column:3;
  grid-row:1;
  padding-bottom:14px;
}
#about .mobilecontact{
  display:none;
  padding-left:4px;
  grid-row:3;
  grid-column:1;
  line-height:1;
  flex-direction:row;
  flex-wrap:wrap;
  padding-bottom:14px;
  transition:.2s; 
  justify-content:flex-start;
}
.contact a:hover, .p a:hover, .listing a:hover, .more a:hover, #description a:hover{
  border-radius:10px;
  box-shadow: 0px -1px 16px 4px yellow;
  background-color: yellow;
}

/*---------------------------------------------index-------------------------------*/
#fullindex{
  position:relative;
  margin:0;
  padding:0;
  padding-left:10px;
  width:100%;
  top:70px;
}
.listing{
  max-width: 100%;
  display: grid;
  padding-left:10px;
  padding-top:12px;
  padding-bottom:10px;
  align-items:center;
  grid-template-columns: 29% 35.5% 35.5%;
  border-bottom:1px solid black;
  cursor:pointer;
  transition: .3s;
}

/*------------make featured story one huge image rather than 2 thumbnails--------*/

/*.firstfeature .extender img:nth-of-type(2){
  display:none;
}
.firstfeature .extender img{
  width:100%;
  padding-right:0px;
}

.firstfeature .images{
  padding-right:0px;
}*/
/*.extender img:nth-of-type(2){
  display:none;
}
.listing .extender img{
  width:100%;
  padding-right:0px;
}

.extender .images{
  padding-right:0px;
}*/
/*----back 2 our regularly scheduled programming----*/
.title, .description, .thumbnails{
  grid-row:1;
}
.title, .description{
  transition:.3s;
  padding-right:20px;
  line-height:1.2;
  display:inline;
  align-self:start;
}
.thumbnails{
  grid-column:3;
  padding-right:4px;
  display:flex;
  justify-content:flex-end;
}
.thumbnails img{
  height:26px;
  padding-right:6px;
  display:inline-block;
}
.extender{
  max-width: 100%;
  display: grid;
  grid-column:1/span 3;
  grid-template-columns: 29% 71%;
  grid-template-rows: auto auto auto;
  padding-top:10px;
  padding-right:10px;
  grid-row:2;
}

.images img{
  width:50%;
  height:auto;
  padding-right:10px;
}
.images{
  max-width:100%;
  grid-column:2;
  grid-row: 1/span 3;
  display:flex;
  flex-direction:row;
  align-items:flex-start;
  justify-content:flex-start;
  padding-right:10px;
}
.words{
  font-family: 'Neue Montreal';
  position:relative;
  max-width:90%;
  line-height:1.3;
  transition:.2s;
  padding-bottom:16px;
}
.listing:not(.firstfeature) .words{
  display:none;
}
.details{
  display:inline-flex;
  position:relative;
  padding-right:14px;
  grid-column:1;
  grid-row:3;
  vertical-align:bottom;
  align-self:flex-end;
}
.details span{
  position:relative;
  margin-right: 24px;
}
.extender a, .more a, .contact a, .words a, .words i, .p a{
  transition: background-color, box-shadow;
  transition-duration:.3s;
  border-radius:8px;
  font-family: "Saol Display Reg";
  font-style:italic;
}
.words a, .words i{
  font-family: "Saol Display Reg";
}
.more{
  margin-top:20px;
  padding-left:10px;
  padding-right:10px;
  line-height:1.2;
  margin-bottom:10px;
  background-color:#f2f2f2;
  display:flex;
  flex-direction:row;
  justify-content:space-between;
}
/*---------------------------------meeeeeeeeeedia queeeeeeeeriiiiiiiiiiiiesssssss-----------*/


/*@media (max-width:1000px){
  body{
      font-size:15px;
  }
  .title, .description, .details, .more{
    font-size: 17px;
  }
}*/
@media (max-width: 900px){
  /*.extender{
    padding-top:8px;
    grid-row-gap:14px;
    grid-template-columns: 35% 35% 18% 12%;
    grid-template-rows: auto auto;
  }
  .extender img:nth-of-type(2){
      display:none;
  }
  .images{
      padding-right:0px;
      grid-column: 1/span 4;
      grid-row:1;
  }
  .images img{
    width:100%;
  }
  .title, .description{
      padding-right:30px;
  }

  .words{
      grid-column:1/span 3;
      grid-row:2;
      padding-bottom:0px;
  }
    .details{
      grid-column:4;
      grid-row:2;
      justify-self:flex-end;
  }
  .details span{
      margin-right:0px;
  }
  */
  #about .p{
    padding-bottom:20px;
    padding-right:14px;
  }
  body{
    font-size:17px;
  }
}

/*@media(max-width: 850px){
  #about{
    padding-top:40px;
  }
  #fullindex{
    top:30px;
  }
  .listing{
    grid-template-columns:35% 50% 15%;
  }
  .listing .description{
   display:none;
  }
  .listing .title{
    grid-column:1/span 2;
    font-family: 'Neue Montreal Medium';
    font-size:1.5rem;
  }
  .listing .thumbnails{
    grid-column:3;
    grid-row:1;
    align-self:end;
  }
  .thumbnails img:nth-of-type(3){
    display:none;
  }
  .firstfeature .words{
    display:none;
  }
  .firstfeature .thumbnails, .firstfeature .title{
    grid-row:3;
  }
  .firstfeature .details{
    display:none;
  }
  .more{
    padding-bottom: 50px;
  }

}*/


/*@media (max-width: 850px) { 
  #about .p, #about .contact{
    grid-column:2/span 3;
    padding-right:30px;
}
#about .p{
  padding-bottom:0px;
}
#about .contact{

    grid-row:2;
    padding-left:6px;
    padding-bottom:14px;
}
}*/

@media (max-width: 700px){
 .details{
    display:none;
  }
  #about{
    padding-top:30px;
    display:none;
    grid-template-columns: 29fr 71fr;
    grid-column-gap:10px;
    grid-template-rows: auto auto;
    padding-left:5px;
    padding-right:15px;
    border-bottom:none;
  }
  #about .p{
    font-size:22px;
    padding-right: 6px;
    padding-bottom:8px;
    letter-spacing:-.1px;
    font-family: 'Neue Montreal Medium';
    grid-column:1/span 2;
    padding-right:6px;
    grid-row:1;
    padding-right:20px;
    border-bottom:1px black solid;
    margin-bottom:8px;
  }
  #about img{
    display:block;
    max-width:100%;
    max-height:100%;
    padding:0;
    padding-left:5px;
    padding-bottom:10px;
    grid-row:2;
    grid-column:1/span 2;
    padding-right:10px;
  }
  #about .contact{
    display:none;
  }
  #about .mobilecontact{
    display:flex;
    flex-direction:column;
    grid-column:2;
    font-size:22px;
  }
  #about span{
    font-size:22px;
    grid-column:1;
    padding-left:5px;
  }
  .list{
    display:none;
  }
  .thumbnails img:nth-of-type(3){
    display:none;
  }
#fullindex{
  top:20px;
}
.listing{
  font-size:22px;
  padding-top:9px;
  padding-bottom:9px
}
.description{
  display:none;
}
.title{
  align-self:end;
  grid-column:1/span 4;
}
.firstfeature .title, .firstfeature .thumbnails{
  grid-row:3;
  padding-top: 14px;
}
.firstfeature .images img:nth-of-type(2){
  display:none;
}
.firstfeature .images img:first-of-type{
  width:100%;
}
.firstfeature .images{
  grid-column:1/span 4;
  padding-right:0px;
}
.listing:not(.firstfeature) .extender{
  display:none;
}


.more span:nth-of-type(2){
  display:none;
}
.more{
  padding-bottom:40px;
}


  .flip:hover{
    transform:rotateY(0deg);
  }
  .top p, .top a, .bottom a, .bottom a, .flip{
    font-size: 24px;
  }
}







.querytown{
  z-index:1000;
  width:300px;
  font-size:2em;
  color:white;
  margin-top:10vh;
  margin-left:50px;
  position:fixed;
  text-align:center;
  background-color:red;
}

